<resources>
    <!-- Login -->

    <string name="welcome" translatable="false">Bienvenido</string>
    <string name="password" translatable="false">Ingresa tu contraseña</string>
    <string name="email" translatable="false">Ingresa tu correo electrónico</string>
    <string name="login" translatable="false">Entrar</string>
    <string name="register" translatable="false">Registrarme</string>
    <!-- Register -->
    <string name="register_header" translatable="false">Para registrarte, completa el formulario</string>
    <string name="name" translatable="false">Ingresa tu nombre</string>
    <string name="old" translatable="false">Ingresa tu edad</string>
    <string name="country" translatable="false">Ingresa tu país</string>
    <string name="state" translatable="false">Ingresa tu estado de residencia</string>
    <string name="register_email" translatable="false">Ingresa tu e-mail</string>
    <string name="register_password" translatable="false">Ingresa tu password</string>
    <string name="registerme" translatable="false">Aceptar</string>
    <string name="back_to_login" translatable="false">Cancelar</string>
    <!--Navigation drawer-->
    <string name="app_name" translatable="false">TDAH</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Ingenieria en sistema computacionales</string>
    <string name="nav_header_subtitle" translatable="false">ITTOLUCA</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>


    <string name="perfil" translatable="false">Perfil</string>
    <string name="encuentra" translatable="false">Scores</string>
    <string name="operaciones" translatable="false"> Juego de Operaciones</string>
    <string name="menu_home" translatable="false">Inicio</string>
    <string name="menu_gallery" translatable="false">Juego de sombras</string>
    <string name="menu_slideshow" translatable="false">Juego de sonidos</string>
    <string name="menu_shadows" translatable="false">Juego de sombras</string>
    <string name="menu_sounds" translatable="false">Juego de sonidos</string>
    <!-- Shadows game -->
    <string name="animal_image" translatable="false">Imagen de animal</string>
    <string name="question" translatable="false">¿Qué animal es?</string>
    <!-- Sounds game -->
    <string name="sounds_header" translatable="false">¿Qué animal hace el sonido?</string>
    <string name="puntuation" translatable="false">Puntuación actual: </string>
    <string name="high_puntuation" translatable="false"> Puntuación más alta: </string>
    <string name="cero" translatable="false">0</string>

    <!-- Generic  -->
    <string name="aceptar" translatable="false">Aceptar</string>
    <string name="sound_on" translatable="false">Sound on</string>

    <string name="comprobar" translatable="false">Comprobar</string>
    <string name="puntos" translatable="false">Puntuación actual:</string>
    <string name="vidas" translatable="false">0</string>

    <string name="perfilcompleto" translatable="false">Perfil del Jugador</string>
    <string name="nombreR" translatable="false">Nombre</string>
    <string name="edadR" translatable="false">Edad</string>
    <string name="paisR" translatable="false">País</string>
    <string name="estadoR" translatable="false">Estado</string>
    <string name="mailR" translatable="false">e-mail</string>
    <string name="passR" translatable="false">Contraseña</string>
    <string name="todo" translatable="false">Todo</string>
    <string name="id" translatable="false">Ingresa un ID</string>
    <string name="info" translatable="false">Instrucciones</string>

    <string name="InstruccionS" translatable="false">Instrucciones Juego de Sombras</string>
    <string name="instruc" translatable="false">Vidas disponibles: 3</string>
    <string name="instruc2" translatable="false">Deberás escribir correctamente el nombre del animal sombreado</string>


    <string name="InstruccionesSonido" translatable="false">Instrucciones Juego de Sonidos</string>
    <string name="instruc3" translatable="false">Vidas disponibles: 3</string>
    <string name="instruc4" translatable="false">Deberás elegir correctamente el animal dependiendo del sonido</string>


    <string name="InstruccionesMate" translatable="false">Instrucciones Juego Matemático</string>
    <string name="instruc5" translatable="false">Vidas disponibles: 3</string>
    <string name="instruc6" translatable="false">Deberás responder correctamente las operaciones matemáticas</string>

    <string name="InstruccionesGenerales" translatable="false">Instrucciones de Juego</string>
    <string name="listara" translatable="false">Top Score</string>



</resources>