<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_foreground"
            android:title="@string/info" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_info_foreground"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_pet_foreground"
            android:title="@string/menu_shadows" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_music"
            android:title="@string/menu_sounds" />
        <item
            android:id="@+id/nav_operaciones"
            android:icon="@drawable/ic_book_foreground"
            android:title="@string/operaciones" />
        <item
            android:id="@+id/nav_encuentra"
            android:icon="@drawable/ic_score_foreground"
            android:title="@string/encuentra" />
    </group>
</menu>