<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_info">

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.siluetas.ui.info.InfoFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.siluetas.ui.perfil.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.siluetas.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.siluetas.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_operaciones"
        android:name="com.example.siluetas.ui.operaciones.OperacionesFragment"
        android:label="@string/operaciones"
        tools:layout="@layout/fragment_operaciones" />

    <fragment
        android:id="@+id/nav_encuentra"
        android:name="com.example.siluetas.ui.encuentra.EncuentraFragment"
        android:label="@string/encuentra"
        tools:layout="@layout/fragment_encuentra" />
</navigation>