<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageViewPersona"
            android:layout_width="196dp"
            android:layout_height="171dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            tools:srcCompat="@drawable/tdah2" />

        <TextView
            android:id="@+id/register_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_header"
            android:gravity="center_horizontal"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/PersonEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <EditText
            android:id="@+id/PersonPasword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <Button
            android:id="@+id/registerme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/primary"
            android:text="@string/registerme"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/back_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/white"
            android:background="@color/gray"
            android:layout_marginTop="15dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>