<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:weightSum="1.0">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:gravity="center_horizontal"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <Button
            android:id="@+id/iniciar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/primary"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/registrarme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/white"
            android:background="@color/gray"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>