<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RestaActivity"
    android:background="@drawable/fondosuma">


    <ImageView
        android:id="@+id/ivnum1mul"
        android:layout_width="115dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="130dp"
        android:scaleType="centerCrop"
        android:src="@drawable/uno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/ivnum2mul"
        android:layout_width="115dp"
        android:layout_height="150dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/dos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ivnum1mul"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNumbermul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivnum1mul" />

    <Button
        android:id="@+id/btncommul"
        android:layout_width="126dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/comprobar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivnum2mul" />

    <TextView
        android:id="@+id/textView3mul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="50dp"
        android:text="@string/puntos"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumbermul" />

    <ImageView
        android:id="@+id/imageViewvida2mul"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/cora" />

    <ImageView
        android:id="@+id/imageViewvida3mul"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/cora" />

    <ImageView
        android:id="@+id/imageViewvida1mul"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/cora" />

    <ImageView
        android:id="@+id/imageViewmul"
        android:layout_width="58dp"
        android:layout_height="66dp"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="168dp"
        android:src="@drawable/multipli"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvpuntosmul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="50dp"
        android:text="@string/vidas"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/textView3mul"
        app:layout_constraintTop_toBottomOf="@+id/etNumbermul" />








</androidx.constraintlayout.widget.ConstraintLayout>