<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SumaActivity"
    android:background="@drawable/fondosuma">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:gravity="end">
            <ImageView
                android:id="@+id/imageViewvida1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/cora" />
            <ImageView
                android:id="@+id/imageViewvida3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/cora" />
            <ImageView
                android:id="@+id/imageViewvida2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/cora" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/puntuacion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:textSize="15sp"
                android:text="@string/high_puntuation"
                android:layout_marginLeft="20dp" />

            <TextView
                android:id="@+id/puntuacion_alta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                tools:layout_editor_absoluteX="164dp"
                tools:layout_editor_absoluteY="0dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="36dp"
                android:text="@string/puntos"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etNumber" />
            <TextView
                android:id="@+id/tvpuntos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:text="@string/vidas"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/etNumber" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/ivnum1"
                android:layout_width="115dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/uno"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:id="@+id/imageViewmas"
                android:layout_width="58dp"
                android:layout_height="66dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/mas"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivnum2"
                android:layout_width="115dp"
                android:layout_height="150dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/dos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/ivnum1"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <EditText
                android:id="@+id/etNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="45dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivnum1" />

            <Button
                android:id="@+id/btncom"
                android:layout_width="126dp"
                android:layout_height="51dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="44dp"
                android:layout_marginRight="44dp"
                android:text="@string/comprobar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivnum2" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>